[dependencies]
cli = { package = "node-cli", path = "node/cli" }
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }


[build-dependencies]
vergen = '3'

[profile.release]
panic = 'unwind'

[[bin]]
name = 'darwinia'
path = 'node/src/main.rs'

[workspace]
members = [
	"node/cli",
    "node/executor",
    "node/primitives",
    "node/runtime",
    "node/rpc-client",
    "srml/staking",
    "srml/kton",
    "srml/support",
	"srml/try",
]

exclude = ["node/runtime/wasm"]

[package]
authors = ['Darwinia Network <hello@darwinia.network>']
build = 'build.rs'
edition = '2018'
name = 'darwinia'
version = '0.3.1'

