[package]
name = "node-runtime"
version = "0.3.1"
authors = ["Darwinia Network <hello@darwinia.network>"]
edition = "2018"
build = "build.rs"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", git = 'https://github.com/paritytech/substrate.git', default-features = false }
runtime-io = { package = "sr-io", git = 'https://github.com/paritytech/substrate.git', default_features = false }
version = { package = "sr-version", git = 'https://github.com/paritytech/substrate.git', default_features = false }
support = { package = "srml-support", git = 'https://github.com/paritytech/substrate.git', default_features = false }
primitives = { package = "substrate-primitives", git = 'https://github.com/paritytech/substrate.git', default_features = false }
substrate-session = { git = 'https://github.com/paritytech/substrate.git', default-features = false }
balances = { package = "srml-balances", git = 'https://github.com/paritytech/substrate.git', default_features = false }
babe = { package = "srml-babe", git = 'https://github.com/paritytech/substrate.git', default-features = false }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = 'https://github.com/paritytech/substrate.git', default-features = false }
executive = { package = "srml-executive", git = 'https://github.com/paritytech/substrate.git', default_features = false }
indices = { package = "srml-indices", git = 'https://github.com/paritytech/substrate.git', default_features = false }
grandpa = { package = "srml-grandpa", git = 'https://github.com/paritytech/substrate.git', default-features = false }
system = { package = "srml-system", git = 'https://github.com/paritytech/substrate.git', default_features = false }
timestamp = { package = "srml-timestamp", git = 'https://github.com/paritytech/substrate.git', default_features = false }
sudo = { package = "srml-sudo", git = 'https://github.com/paritytech/substrate.git', default_features = false }
sr-primitives = { git = 'https://github.com/paritytech/substrate.git', default_features = false }
sr-staking-primitives = { git = 'https://github.com/paritytech/substrate.git', default-features = false }
client = { package = "substrate-client", git = 'https://github.com/paritytech/substrate.git', default_features = false }
offchain-primitives = { package = "substrate-offchain-primitives", git = 'https://github.com/paritytech/substrate.git', default-features = false }
treasury = { package = "srml-treasury", git = 'https://github.com/paritytech/substrate.git', default-features = false }

authority-discovery-primitives = { package = "substrate-authority-discovery-primitives", git = 'https://github.com/paritytech/substrate.git', default-features = false }
authority-discovery = { package = "srml-authority-discovery", git = 'https://github.com/paritytech/substrate.git', default-features = false }
authorship = { package = "srml-authorship", git = 'https://github.com/paritytech/substrate.git', default-features = false }
session = { package = "srml-session", git = 'https://github.com/paritytech/substrate.git', default-features = false }
im-online = { package = "srml-im-online", git = 'https://github.com/paritytech/substrate.git', default-features = false }

# customed
kton = { package = "evo-kton", path = '../../srml/kton', default-features = false}
ostaking = { package = "ostaking", path = "../../srml/ostaking", default-features = false}
srml-staking-reward-curve = { path = "../../srml/ostaking/reward-curve"}

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.2", git = 'https://github.com/paritytech/substrate.git' }

[features]
default = ["std"]
std = [
    "authority-discovery-primitives/std",
	"authority-discovery/std",
	"authorship/std",
	"codec/std",
	"client/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"babe/std",
	"babe-primitives/std",
	"executive/std",
	"indices/std",
	"grandpa/std",
	"primitives/std",
	"sr-primitives/std",
	"sr-staking-primitives/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"offchain-primitives/std",
	"substrate-session/std",
	"treasury/std",
	"kton/std",
	"ostaking/std",
	"im-online/std",
]
