[package]
name = "ostaking"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false}
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
substrate-keyring = { git = 'https://github.com/paritytech/substrate.git', optional = true }
rstd = { package = "sr-std", git = 'https://github.com/paritytech/substrate.git', default-features = false }
phragmen = { package = "substrate-phragmen", git = 'https://github.com/paritytech/substrate.git', default-features = false }
runtime-io ={ package = "sr-io", git = 'https://github.com/paritytech/substrate.git', default-features = false }
sr-primitives = { git = 'https://github.com/paritytech/substrate.git', default-features = false }
sr-staking-primitives = { git = 'https://github.com/paritytech/substrate.git', default-features = false }
support = { package = "srml-support", git = 'https://github.com/paritytech/substrate.git', default-features = false }
system = { package = "srml-system", git = 'https://github.com/paritytech/substrate.git', default-features = false }
session = { package = "srml-session", git = 'https://github.com/paritytech/substrate.git', default-features = false, features = ["historical"] }
authorship = { package = "srml-authorship", git = 'https://github.com/paritytech/substrate.git', default-features = false }

[dev-dependencies]
primitives = { package = "substrate-primitives", git = 'https://github.com/paritytech/substrate.git' }
balances = { package = "srml-balances", git = 'https://github.com/paritytech/substrate.git' }
timestamp = { package = "srml-timestamp", git = 'https://github.com/paritytech/substrate.git' }
srml-staking-reward-curve = { path = "../ostaking/reward-curve"}

[features]
equalize = []
default = ["std", "equalize"]
std = [
	"serde",
	"safe-mix/std",
	"substrate-keyring",
	"codec/std",
	"rstd/std",
	"phragmen/std",
	"runtime-io/std",
	"support/std",
	"sr-primitives/std",
	"sr-staking-primitives/std",
	"session/std",
	"system/std",
	"authorship/std",
]
