[package]
name = "darwinia-staking"
version = "0.1.0"
authors = ["hammeWang <dsw0602@foxmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
safe-mix = { version = "1.0", default-features = false}

substrate-keyring = { git = 'https://github.com/paritytech/substrate.git', optional = true }
rstd = { package = "sr-std", git = 'https://github.com/paritytech/substrate.git', default-features = false }
runtime_io = { package = "sr-io", git = 'https://github.com/paritytech/substrate.git', default-features = false }
primitives = { package = "sr-primitives",git = 'https://github.com/paritytech/substrate.git', default-features = false }
support = { package = "srml-support", git = 'https://github.com/paritytech/substrate.git', default-features = false }
system = { package = "srml-system", git = 'https://github.com/paritytech/substrate.git', default-features = false }
timestamp = { package = "srml-timestamp", git = 'https://github.com/paritytech/substrate.git', default-features = false }
session = { package = "srml-session",git = 'https://github.com/paritytech/substrate.git', default-features = false, features = ["historical"]}
sr-staking-primitives = { package = "sr-staking-primitives", git = 'https://github.com/paritytech/substrate.git', default-features = false }
dsupport = { package = "evo-support", path = "../support", default-features = false }
substrate-primitives = { git = 'https://github.com/paritytech/substrate.git', default-features = false }

[dev-dependencies]
substrate-primitives = { git = 'https://github.com/paritytech/substrate.git' }
timestamp = { package = "srml-timestamp", git = 'https://github.com/paritytech/substrate.git' }
balances = { package = "srml-balances", git = 'https://github.com/paritytech/substrate.git' }
kton = { package = "evo-kton", path = "../kton" }
rand = "0.6.5"
node-runtime = { path = "../../node/runtime" }

[features]
equalize = []
bench = []
default = ["std", "equalize"]
std = [
	"serde",
	"safe-mix/std",
	"substrate-keyring",
	"codec/std",
	"rstd/std",
	"runtime_io/std",
	"support/std",
	"primitives/std",
	"substrate-primitives/std",
	"session/std",
	"system/std",
	"timestamp/std",
	"dsupport/std",
]
